[gd_scene load_steps=7 format=3 uid="uid://c1ikefc57lavc"]

[ext_resource type="Script" uid="uid://crflhie1ug604" path="res://scripts/apple_tree.gd" id="1_k6e6y"]
[ext_resource type="Texture2D" uid="uid://cu124dr0e72lu" path="res://art/survivalgame-appletree.png" id="2_idwsj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b72hq"]
atlas = ExtResource("2_idwsj")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_i82r7"]
atlas = ExtResource("2_idwsj")
region = Rect2(80, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_hvlb6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b72hq")
}],
"loop": true,
"name": &"apples",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i82r7")
}],
"loop": true,
"name": &"no_apple",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_x3w4c"]
radius = 39.4588

[node name="apple_tree" type="Node2D"]
script = ExtResource("1_k6e6y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hvlb6")
animation = &"apples"

[node name="pick_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pick_area"]
shape = SubResource("CircleShape2D_x3w4c")

[node name="grow_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]

[connection signal="body_entered" from="pick_area" to="." method="_on_pick_area_body_entered"]
[connection signal="body_exited" from="pick_area" to="." method="_on_pick_area_body_exited"]
[connection signal="timeout" from="grow_timer" to="." method="_on_grow_timer_timeout"]
